# personal-website

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AboutPage.tsx  BlogPage.tsx  BlogPostPage.tsx  HomePage.tsx  LoginPage.tsx  index.ts
frontend/src/services/: api.ts  auth.ts  index.ts  posts.ts
frontend/src/types/: api.ts
migrations/: 001_create_roles.sql  002_create_permissions.sql  003_create_role_permissions.sql  004_create_users.sql  005_create_categories.sql  006_create_tags.sql  007_create_post_status_enum.sql  008_create_posts.sql  009_create_post_tags.sql  010_create_triggers.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  response.rs  routes.rs
src/controllers/: auth_controller.rs  category_controller.rs  health_controller.rs  mod.rs  permission_controller.rs  post_controller.rs  role_controller.rs  tag_controller.rs  user_controller.rs
src/middleware/: auth.rs  mod.rs
src/models/: category.rs  mod.rs  permission.rs  post.rs  role.rs  tag.rs  user.rs
src/pkg/: mod.rs  redis.rs
src/repositories/: category_repo.rs  mod.rs  post_repo.rs  role_repo.rs  tag_repo.rs  user_repo.rs
src/services/: auth_service.rs  category_service.rs  mod.rs  post_service.rs  tag_service.rs
