[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["budhilaw"]
description = "Personal website backend with Rust, PostgreSQL, and Redis"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
axum-test = "16"

[profile.release]
lto = true
codegen-units = 1
strip = true
